API: Add LNURL-Pay to wallet data
