# BTCPayServer.Plugins.LNbank/Resources/swagger/v1/swagger.template.lnbank.json
@@ -286,6 +286,16 @@
           "accessKey": {
             "type": "string",
             "description": "The access key for the wallet"
+          },
+          "lnurlPayBech32": {
+            "type": "string",
+            "description": "Bech32 representation of LNURL for pay requests",
+            "example": "lnurl1dp68gup69uhnzv3h9cczuvpwxyarzdp3xsez7ctsdyhhvvf0d3hxyctwdvhkcmn4wfkz7v3kxccr2dekxyknsctyxgkngveexyknsv33vykngvr9v5unjv3evfnrwde0wpshj5c6cpv"
+          },
+          "lnurlPayUri": {
+            "type": "string",
+            "description": "URI representation of LNURL for pay requests",
+            "example": "lnurlp://example.com/api/v1/lnbank/lnurl/26605761-8ad2-4391-821a-40ee9929bf77/pay"
           }
         }
       }
